<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:fitsSystemWindows="true"
    android:background="@drawable/main_screen_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/back_color_with_opacity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.driveway.Component.TTextView
            android:textStyle="bold"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/white"
            android:layout_above="@id/text"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.driveway.Component.TTextView
            android:textStyle="normal"
            android:id="@+id/text"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/white_with_opacity_78"
            android:layout_above="@id/SignIn"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.driveway.Component.BButton
            android:text="@string/sign_in"
            android:textSize="@dimen/_12ssp"
            android:id="@+id/SignIn"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_above="@id/SignUp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/border_button_with_fill"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp" />

        <com.driveway.Component.BButton
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_above="@id/Skip"
            android:layout_centerHorizontal="true"
            android:id="@+id/SignUp"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/border_button"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp" />

        <com.driveway.Component.BButton
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/Skip"
            android:text="SKIP LOGIN"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/border_button"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp" />
    </RelativeLayout>


</LinearLayout>