<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:gravity="center"
        android:background="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_50sdp"
            android:src="@drawable/ic_back_white"
            android:id="@+id/back"
            android:layout_height="@dimen/_20sdp"></androidx.appcompat.widget.AppCompatImageView>
        <com.driveway.Component.TTextView
            android:layout_toRightOf="@id/back"
            android:text="Settings"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.driveway.Component.TTextView>
    </RelativeLayout>
    <ScrollView
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llTerms"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_terms_condition"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/terms_conditions"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llprivacy"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_privacy_policy"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/privacy_policy"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHowAppWork"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_how_help_work"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/how_the_app_works"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBank"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:id="@+id/imgBank"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_bank"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:id="@+id/tvBank"
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/bank"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAffiliation"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_affiliation"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/Affiliations"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llChangePassword"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_change_password"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/changepassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFeedback"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_feedback"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/feedback"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogout"
        android:weightSum="5"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logout_icon"
            android:layout_height="@dimen/_40sdp"></androidx.appcompat.widget.AppCompatImageView>

        <com.driveway.Component.TTextView
            android:layout_weight="3"
            android:gravity="center|left"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:text="@string/logout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp">

        </com.driveway.Component.TTextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_click"
            android:layout_height="@dimen/_30sdp"></androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>